# bitd_v2

./: .gitignore  README.md
client/: index.html
client/css/: main.css
client/js/: app.js  clock.js  clock_bar.js  darkmode.js  dice.js  lit-all.min.js  map.js  note.js  notes.js  notes_list.js  sidebar.js  userswitcher.js
server/: Cargo.toml
server/src/: main.rs
