[package]
name = "bitd_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.2", features = ["ws"] }
hyper = { version = "0.14.20", features = ["full"] }
tokio = { version = "1.21.0", features = ["full"] }
tower = { version = "0.4.13", features = [] }
serde = { version = "1.0.144", features = ["derive"]}
serde_json = "1.0.85"
futures = "0.3.25"
uuid = { version = "1.3.0", features = ["v7", "fast-rng", "macro-diagnostics", "serde"]}
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
axum-typed-websockets = { version = "0.4.0", features = ["json"] }
dashmap = { version = "5.4.0", features = ["serde"] }
axum-extra = { version = "0.4.2", features = ["spa"] }
toml = { version = "0.7.1", features = ["display"] }
glob = "0.3.1"
